--- a/requirements.txt
+++ b/requirements.txt
@@ -6,10 +6,8 @@ matplotlib
 seaborn
 scikit-learn
 scipy
+streamlit
 tensorflow-macos==2.10.0; sys_platform == 'darwin' and 'ARM' in platform_version # Mac M-chips
 tensorflow==2.10.0; sys_platform == 'darwin' and 'ARM' not in platform_version # Mac Intel chips
 tensorflow==2.10.0; sys_platform != 'darwin' # Windows & Ubuntu Intel chips
 Pillow
-
-
-
